add basic support for FFI to C - start rearranging CMake file to allow for DEBUG or non-DEBUG builds

--- a/zion.1
+++ b/zion.1
@@ -78,6 +78,12 @@ STATUS_BREAK=\fI1\fR
 When set to non-zero value,
 .B zion
 breaks into the debugger at the first user error found (helpful when working on the compiler).
+.TP
+.br
+DUMP_BUILTINS=\fI1\fR
+When set to non-zero value,
+.B zion
+lists all the registered builtin functions and quits.
 .SH AUTHOR
 .sp
 Zion was started and is currently maintained by William Bradley.
