get basic Map type implementation working - add tests

--- a/zion.1
+++ b/zion.1
@@ -51,7 +51,7 @@ When searching for the specified \fIprogram\fR, \fBzion\fR will look in the curr
 .br
 ZION_PATH=\fI/usr/local/share/zion/lib\fR
 A colon-separated list of directories to search for imported libraries.
-Libraries are imported with the `get` keyword.
+Libraries are imported with the `import` keyword.
 The `lib/std.zion` library is called the prelude and is automatically imported unless 
 .B NO_PRELUDE
 is given.
