many fixes - incorporate LLVM 10 - rework dependency installation steps

--- a/zion.1
+++ b/zion.1
@@ -56,7 +56,7 @@ If
 is not set, it will default to
 .B $ZION_ROOT/lib
 \&. If 
-.B ZION_RT
+.B ZION_RUNTIME
 is not set, it will default to "
 .B $ZION_ROOT/runtime
 \&.
@@ -72,7 +72,7 @@ is given. Setting this variable overrides the
 location.
 .TP
 .br
-ZION_RT=\fI/usr/local/share/zion/runtime\fR
+ZION_RUNTIME=\fI/usr/local/share/zion/runtime\fR
 The location of the C-runtime portion of Zion's builtins. See src/zion_rt.c. Setting this variable overrides the
 .B $ZION_ROOT/runtime
 location.
