--- a/zion.1
+++ b/zion.1
@@ -116,25 +116,29 @@ MIT License
 Copyright (c) 2019 William Bradley
 .TP
 .br
-Permission is hereby granted, free of charge, to any person obtaining a copy of
-this software and associated documentation files (the "Software"), to deal in
-the Software without restriction, including without limitation the rights to
-use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
-of the Software, and to permit persons to whom the Software is furnished to do
+Permission is hereby granted, free of charge, to any person obtaining a copy of \
+this software and associated documentation files (the "Software"), to deal in \
+the Software without restriction, including without limitation the rights to \
+use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies \
+of the Software, and to permit persons to whom the Software is furnished to do \
 so, subject to the following conditions:
 .TP
 .br
-The above copyright notice and this permission notice shall be included in all
+The above copyright notice and this permission notice shall be included in all \
 copies or substantial portions of the Software.
 .TP
 .br
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR \
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, \
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE \
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER \
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, \
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE \
 SOFTWARE.
 .SH "REPORTING BUGS"
 .sp
-Note that Zion is still a pre-release language/compiler. Bug reports are greatly appreciated. Report bugs to the Zion GitHub site. \fBhttps://github.com/zionlang/zion/issues\fR.
+Note that this version of Zion is pre-release quality software. No guarantees \
+are given regarding changes to protocols, language grammar, semantics, or \
+standard library interface. Bug reports are greatly appreciated. Report bugs to \
+the Zion GitHub site. \fBhttps://github.com/zionlang/zion/issues\fR. Pull Requests \
+are welcome!
