--- a/zion.1
+++ b/zion.1
@@ -113,7 +113,7 @@ Zion Programming Environment
 MIT License
 .TP
 .br
-Copyright (c) 2019 William Bradley
+Copyright (c) 2015-2020 William Bradley
 .TP
 .br
 Permission is hereby granted, free of charge, to any person obtaining a copy of \
