--- a/ace.1
+++ b/ace.1
@@ -22,7 +22,7 @@ ace [\fBtest\fR] \-\- run unit tests
 .SH DESCRIPTION
 .na
 Ace is a general purpose programming language.
-The source code is available at \fBhttps://github.com/acelang/ace\fR.
+The source code is available at \fBhttps://github.com/wbbradley/ace\fR.
 .P
 ace
 .B run
@@ -51,11 +51,11 @@ When searching for the specified \fIprogram\fR, \fBace\fR will look in the curre
 .br
 ACE_ROOT=\fI/usr/local/share/ace\fR
 Should point to the base directory for standard runtime and library.
-If 
+If
 .B ACE_PATH
 is not set, it will default to
 .B $ACE_ROOT/lib
-\&. If 
+\&. If
 .B ACE_RUNTIME
 is not set, it will default to "
 .B $ACE_ROOT/runtime
@@ -65,7 +65,7 @@ is not set, it will default to "
 ACE_PATH=\fI/usr/local/share/ace/lib\fR
 A colon-separated list of directories to search for imported libraries.
 Libraries are imported with the `import` keyword.
-The `lib/std.ace` library is called the prelude and is automatically imported unless 
+The `lib/std.ace` library is called the prelude and is automatically imported unless
 .B NO_PRELUDE
 is given. Setting this variable overrides the
 .B $ACE_ROOT/lib
@@ -140,5 +140,5 @@ SOFTWARE.
 Note that this version of Ace is pre-release quality software. No guarantees \
 are given regarding changes to protocols, language grammar, semantics, or \
 standard library interface. Bug reports are greatly appreciated. Report bugs to \
-the Ace GitHub site. \fBhttps://github.com/acelang/ace/issues\fR. Pull Requests \
+the Ace GitHub site. \fBhttps://github.com/wbbradley/ace/issues\fR. Pull Requests \
 are welcome!
